gcc/testsuite/rust/rustc/ui/not-panic/not-panic-safe-3.rs
#![allow(dead_code)]

use std::panic::UnwindSafe;
use std::sync::Arc;
use std::cell::RefCell;

fn assert<T: UnwindSafe + ?Sized>() {}

fn main() {
    assert::<Arc<RefCell<i32>>>();
// { dg-error ".E0277." "" { target *-*-* } .-1 }
// { dg-error ".E0277." "" { target *-*-* } .-2 }
}

